--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -7,7 +7,7 @@ h4,
 h5,
 h6 {
 	margin: 0;
-	font-family: "Maven Pro", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+	font-family: "Raleway", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
 		"Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -16,5 +16,5 @@ body {
     line-height: 1.5;
 }
 
-$textSize: calc(10px + 1.2vmin);
+$textSize: calc(10px + 1.15vmin);
 	// the calc above, with 1.6vmin, seems like close enough to the right balance for now
